--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,23 @@
 {
-  "name": "media-lounge/disabled-product-redirect",
-  "description": "Disabled Product Redirect",
-  "type": "magento2-module",
-  "version": "0.1.0",
-  "license": [
-    "OSL-3.0"
-  ],
-  "require": {
-    "php": "~5.6.5|7.0.2|7.0.4|~7.0.6",
-    "magento/magento-composer-installer": "*",
-    "magento/framework": "100.1.*"
-  },
-  "autoload": {
-    "files": [ "registration.php" ],
-    "psr-4": {
-      "MediaLounge\\DisabledProductRedirect\\": ""
+    "name": "media-lounge/disabled-product-redirect",
+    "description": "Disabled Product Redirect",
+    "type": "magento2-module",
+    "version": "0.1.0",
+    "license": [
+        "OSL-3.0"
+    ],
+    "require": {
+        "php": "~5.6.5|7.0.2|7.0.4|~7.0.6",
+        "magento/magento-composer-installer": "*",
+        "magento/module-catalog": "102.0.*",
+        "magento/framework": "101.0.*"
+    },
+    "autoload": {
+        "files": [
+            "registration.php"
+        ],
+        "psr-4": {
+            "MediaLounge\\DisabledProductRedirect\\": ""
+        }
     }
-  }
 }
